class HootTags
{
    /**
     * @type {Hoot}
     */
    hoot;

    /**
     * @type {String[]}
     */
    hootTags;
}