class Reaction extends Hoot
{
    /**
     * @type {Hoot}
     */
    hoot;

    /**
     * @type {User}
     */
    user;

    /**
     * @type {String}
     */
    interaction; // TODO: enum
}