package hbv.api.dto.hoot;

public enum HootType
{
    post,
    comment,
    image
}
