package hbv.api.dto.user;

public class FollowerDTO
{
    public int id;

    public String username;

    public String imageUrl;
}
