package hoot.model.entities;

public enum Interaction
{
    LIKE,
    DISLIKE
}
