@startuml
'https://plantuml.com/class-diagram
/' TODO: Beautify '/

class Historie {
    -id: Integer
    +timestamp: DateTime
    +currentLoggedIn: Integer
    +loginsPerSixHours: Float
    +registrationsPerSixHours: Float
    +postsPerMinute: Float /'Durchschnitt seit letztem Timestamp'/
    +requestsPerSecond: Float
    +requestsLoggedInPerSecond: Float
    +currentlyRegisteredUsers: Integer
    +trendingHashtags: String
    +availableProcessors: int
    +systemLoadAverage: double
    +systemCPULoad: double
    +processCPULoad: double
    +memoryMax: int
    +memoryTotal: int
    +memoryFree: int
    +memoryUsed: int
    +threadCount: int
    +threadCountTotal: int
}

enum Interaction {
    LIKE
    DISLIKE
}

class Reaction {
    *id: Integer
    -user: User
    -hoot: Hoot
    -interaction: Interaction
    -created: DateTime
    -modified: DateTime
}

enum HootType {
    Post
    Comment
    Image
    Poll /' TODO: Maybe or maybe not implement '/
}

class Post {
    -hoot: Hoot
    -content: String
    -onlyFollower: boolean /'TODO: Check if this is cool'/
}

class Comment {
    -hoot: Hoot
    -parent: Hoot
    -content: String
}

class Image {
    -hoot: Hoot
    -imagePath: String
    -content: String
    -onlyFollower: boolean /'TODO: Check if this is cool'/
}

class Hoot {
    *id: Integer
    -user: User
    -hootType: HootType
    -created: DateTime
    -modified: DateTime
    +getContent(): String
}

class HootTags {
    -id: Integer
    -hoot: Hoot
    -tag: Tag
}

class Tag {
    -tag: String /' Only lowercase! '/
}

class HootMentions {
    -id: Integer
    -hoot: Hoot
    -mention: User
}

class User {
    *id: Integer
    -username: String
    -imagePath: String
    -passwordHash: String
    -lastLogin: DateTime
    -created: DateTime
    -modified: DateTime
    +follow(User): void
}

class Follower {
    *id: Integer
    -user: User
    -follows: User
    -created: DateTime
}

/'
    TODO: Multiplizität prüfen, Ein User eine Interaktion pro Post
    ggf. Trigger
'/
User "0..*" -- "1..*" Follower
User "1..*" - "*" Reaction
Reaction "*" - "1" Hoot /'TODO: Aggregation&Komposition'/
Interaction --+ Reaction

Hoot <|-- Post
Hoot <|-- Comment
Hoot <|-- Image
Hoot <|-- Poll /'TODO: Maybe or maybe not implement'/
Hoot +- HootType

Hoot "1" - "*" HootTags
HootTags "*" -- "1" Tag

Hoot "1" - "*" HootMentions
HootMentions "*" - "1" User

@enduml